test/compflags/ferguson/default-unmanaged.default.good
default-unmanaged.chpl:73: In function 'test4':
default-unmanaged.chpl:77: error: 'delete' can only be applied to unmanaged classes
